--- a/core/invoker/src/main/resources/application.conf
+++ b/core/invoker/src/main/resources/application.conf
@@ -19,6 +19,11 @@
 include "logging"
 include "akka-http-version"
 
+akka {
+    jvm-shutdown-hooks = off
+    coordinated-shutdown.exit-jvm = off
+}
+
 whisk {
   blacklist {
     poll-interval: 5 minutes
