--- a/common/scala/src/main/resources/reference.conf
+++ b/common/scala/src/main/resources/reference.conf
@@ -21,8 +21,8 @@ whisk.spi {
   ArtifactStoreProvider = org.apache.openwhisk.core.database.CouchDbStoreProvider
   ActivationStoreProvider = org.apache.openwhisk.core.database.ArtifactActivationStoreProvider
   MessagingProvider = org.apache.openwhisk.connector.kafka.KafkaMessagingProvider
-  ContainerFactoryProvider = org.apache.openwhisk.core.containerpool.docker.DockerContainerFactoryProvider
-  LogStoreProvider = org.apache.openwhisk.core.containerpool.logging.DockerToActivationLogStoreProvider
+  ContainerFactoryProvider = org.apache.openwhisk.core.containerpool.singularity.SingularityContainerFactoryProvider
+  LogStoreProvider = org.apache.openwhisk.core.containerpool.logging.SingularityToActivationLogStoreProvider
   LoadBalancerProvider = org.apache.openwhisk.core.loadBalancer.ShardingContainerPoolBalancer
   EntitlementSpiProvider = org.apache.openwhisk.core.entitlement.LocalEntitlementProvider
   AuthenticationDirectiveProvider = org.apache.openwhisk.core.controller.BasicAuthenticationDirective
