--- a/core/invoker/src/main/resources/application.conf
+++ b/core/invoker/src/main/resources/application.conf
@@ -51,6 +51,22 @@ whisk {
     use-runc: true
   }
 
+  singularity.client {
+    parallel-runs: 10
+
+    # Timeouts for singularity commands. Set to "Inf" to disable timeout.
+    timeouts {
+      run: 1 minute
+      rm: 1 minute
+      pull: 10 minutes
+      ps: 1 minute
+      inspect: 1 minute
+      pause: 10 seconds
+      unpause: 10 seconds
+      version: 10 seconds
+    }
+  }
+
   docker.standalone.container-factory {
     #If enabled then pull would also be attempted for standard OpenWhisk images under`openwhisk` prefix
     pull-standard-images: false
