Deploy native invoker with ansible

--- a/ansible/roles/invoker/tasks/deploy.yml
+++ b/ansible/roles/invoker/tasks/deploy.yml
@@ -202,132 +202,7 @@
   set_fact:
     openwhisk_config: "{{ lookup('template', 'config.j2') | b64encode }}"
 
-- name: populate environment variables for invoker
-  set_fact:
-    env:
-      "JAVA_OPTS": "-Xmx{{ invoker.heap }} -XX:+CrashOnOutOfMemoryError -XX:+UseGCOverheadLimit -XX:ErrorFile=/logs/java_error.log"
-      "INVOKER_OPTS": "{{ invoker_args | default(invoker.arguments) }}"
-      "JMX_REMOTE": "{{ jmx.enabled }}"
-      "OPENWHISK_ENCODED_CONFIG": "{{ openwhisk_config }}"
-      "PORT": "8080"
-      "TZ": "{{ docker.timezone }}"
-      "KAFKA_HOSTS": "{{ kafka_connect_string }}"
-      "CONFIG_whisk_kafka_replicationFactor": "{{ kafka.replicationFactor | default() }}"
-      "CONFIG_whisk_kafka_topics_invoker_retentionBytes": "{{ kafka_topics_invoker_retentionBytes | default() }}"
-      "CONFIG_whisk_kafka_topics_invoker_retentionMs": "{{ kafka_topics_invoker_retentionMS | default() }}"
-      "CONFIG_whisk_kakfa_topics_invoker_segmentBytes": "{{ kafka_topics_invoker_segmentBytes | default() }}"
-      "CONFIG_whisk_kafka_topics_prefix": "{{ kafka.topicsPrefix }}"
-      "CONFIG_whisk_kafka_topics_userEvent_prefix": "{{ kafka.topicsUserEventPrefix }}"
-      "CONFIG_whisk_kafka_common_securityProtocol": "{{ kafka.protocol }}"
-      "CONFIG_whisk_kafka_common_sslTruststoreLocation": "/conf/{{ kafka.ssl.keystore.name }}"
-      "CONFIG_whisk_kafka_common_sslTruststorePassword": "{{ kafka.ssl.keystore.password }}"
-      "CONFIG_whisk_kafka_common_sslKeystoreLocation": "/conf/{{ kafka.ssl.keystore.name }}"
-      "CONFIG_whisk_kafka_common_sslKeystorePassword": "{{ kafka.ssl.keystore.password }}"
-      "CONFIG_whisk_userEvents_enabled": "{{ user_events | default(false) | lower }}"
-      "ZOOKEEPER_HOSTS": "{{ zookeeper_connect_string }}"
-      "CONFIG_whisk_couchdb_protocol": "{{ db.protocol }}"
-      "CONFIG_whisk_couchdb_host": "{{ db.host }}"
-      "CONFIG_whisk_couchdb_port": "{{ db.port }}"
-      "CONFIG_whisk_couchdb_username": "{{ db.credentials.invoker.user }}"
-      "CONFIG_whisk_couchdb_password": "{{ db.credentials.invoker.pass }}"
-      "CONFIG_whisk_couchdb_provider": "{{ db.provider }}"
-      "CONFIG_whisk_couchdb_databases_WhiskAuth": "{{ db.whisk.auth }}"
-      "CONFIG_whisk_couchdb_databases_WhiskEntity": "{{ db.whisk.actions }}"
-      "CONFIG_whisk_couchdb_databases_WhiskActivation": "{{ db.whisk.activations }}"
-      "DB_WHISK_ACTIONS": "{{ db.whisk.actions }}"
-      "DB_WHISK_ACTIVATIONS": "{{ db.whisk.activations }}"
-      "DB_WHISK_AUTHS": "{{ db.whisk.auth }}"
-      "CONFIG_whisk_db_subjectsDdoc": "{{ db_whisk_subjects_ddoc | default() }}"
-      "CONFIG_whisk_db_actionsDdoc": "{{ db_whisk_actions_ddoc | default() }}"
-      "CONFIG_whisk_db_activationsDdoc": "{{ db_whisk_activations_ddoc | default() }}"
-      "CONFIG_whisk_db_activationsFilterDdoc": "{{ db_whisk_activations_filter_ddoc | default() }}"
-      "WHISK_API_HOST_PROTO": "{{ whisk_api_host_proto | default('https') }}"
-      "WHISK_API_HOST_PORT": "{{ whisk_api_host_port | default('443') }}"
-      "WHISK_API_HOST_NAME": "{{ whisk_api_host_name | default(groups['edge'] | first) }}"
-      "CONFIG_whisk_containerFactory_runtimesRegistry_url": "{{ runtimes_registry | default('') }}"
-      "CONFIG_whisk_containerFactory_userImagesRegistry_url": "{{ user_images_registry | default('') }}"
-      "RUNTIMES_MANIFEST": "{{ runtimesManifest | to_json }}"
-      "CONFIG_whisk_runtimes_bypassPullForLocalImages": "{{ runtimes_bypass_pull_for_local_images | default() | lower }}"
-      "CONFIG_whisk_runtimes_localImagePrefix": "{{ runtimes_local_image_prefix | default() }}"
-      "CONFIG_whisk_containerFactory_containerArgs_network": "{{ invoker_container_network_name | default('bridge') }}"
-      "INVOKER_CONTAINER_POLICY": "{{ invoker_container_policy_name | default()}}"
-      "CONFIG_whisk_containerPool_userMemory": "{{ hostvars[groups['invokers'][invoker_index | int]].user_memory | default(invoker.userMemory) }}"
-      "CONFIG_whisk_docker_client_parallelRuns": "{{ invoker_parallel_runs | default() }}"
-      "CONFIG_whisk_docker_containerFactory_useRunc": "{{ invoker.useRunc | default(false) | lower }}"
-      "WHISK_LOGS_DIR": "{{ whisk_logs_dir }}"
-      "METRICS_KAMON": "{{ metrics.kamon.enabled | default(false) | lower }}"
-      "METRICS_KAMON_TAGS": "{{ metrics.kamon.tags | default() | lower }}"
-      "METRICS_LOG": "{{ metrics.log.enabled | default(false) | lower }}"
-      "CONFIG_kamon_statsd_hostname": "{{ metrics.kamon.host }}"
-      "CONFIG_kamon_statsd_port": "{{ metrics.kamon.port }}"
-      "CONFIG_whisk_spi_LogStoreProvider": "{{ userLogs.spi }}"
-      "CONFIG_whisk_spi_InvokerProvider": "{{ invoker.reactiveSpi }}"
-      "CONFIG_whisk_spi_InvokerServerProvider": "{{ invoker.serverSpi }}"
-      "CONFIG_logback_log_level": "{{ invoker.loglevel }}"
-      "CONFIG_whisk_memory_min": "{{ limit_action_memory_min | default() }}"
-      "CONFIG_whisk_memory_max": "{{ limit_action_memory_max | default() }}"
-      "CONFIG_whisk_memory_std": "{{ limit_action_memory_std | default() }}"
-      "CONFIG_whisk_timeLimit_min": "{{ limit_action_time_min | default() }}"
-      "CONFIG_whisk_timeLimit_max": "{{ limit_action_time_max | default() }}"
-      "CONFIG_whisk_timeLimit_std": "{{ limit_action_time_std | default() }}"
-      "CONFIG_whisk_concurrencyLimit_min": "{{ limit_action_concurrency_min | default() }}"
-      "CONFIG_whisk_concurrencyLimit_max": "{{ limit_action_concurrency_max | default() }}"
-      "CONFIG_whisk_concurrencyLimit_std": "{{ limit_action_concurrency_std | default() }}"
-      "CONFIG_whisk_activation_payload_max": "{{ limit_activation_payload | default() }}"
-      "CONFIG_whisk_transactions_header": "{{ transactions.header }}"
-      "CONFIG_whisk_containerPool_akkaClient": "{{ container_pool_akka_client | default('false') | lower }}"
-      "CONFIG_whisk_containerFactory_containerArgs_extraEnvVars_0": "__OW_ALLOW_CONCURRENT={{ runtimes_enable_concurrency | default('false') }}"
-      "CONFIG_whisk_invoker_protocol": "{{ invoker.protocol }}"
-      "CONFIG_whisk_invoker_https_keystorePath": "/conf/{{ invoker.ssl.keystore.name }}"
-      "CONFIG_whisk_invoker_https_keystorePassword": "{{ invoker.ssl.keystore.password }}"
-      "CONFIG_whisk_invoker_https_keystoreFlavor": "{{ invoker.ssl.storeFlavor }}"
-      "CONFIG_whisk_invoker_https_clientAuth": "{{ invoker.ssl.clientAuth }}"
-      "CONFIG_whisk_containerPool_prewarmExpirationCheckInitDelay": "{{ container_pool_prewarm_expirationCheckInitDelay | default('10 minutes') }}"
-      "CONFIG_whisk_containerPool_prewarmExpirationCheckInterval": "{{ container_pool_prewarm_expirationCheckInterval | default('10 minutes') }}"
-      "CONFIG_whisk_containerPool_prewarmExpirationCheckIntervalVariance": "{{ container_pool_prewarm_expirationCheckIntervalVariance | default('10 seconds') }}"
-      "CONFIG_whisk_containerPool_prewarmPromotion": "{{ container_pool_strict | default('false') | lower }}"
-      "CONFIG_whisk_containerPool_prewarmMaxRetryLimit": "{{ container_pool_prewarm_max_retry_limit | default(5) }}"
-      "CONFIG_whisk_singularity_client_imagePath": "{{ invoker.singularity.imagePath }}"
-
-- name: extend invoker dns env
-  set_fact:
-    env: "{{ env | default({}) | combine( {'CONFIG_whisk_containerFactory_containerArgs_dnsServers_' ~ inv_item.0: inv_item.1} ) }}"
-  with_indexed_items: "{{ (invoker_container_network_dns_servers | default()).split(' ')}}"
-  loop_control:
-    loop_var: inv_item
-
-- name: merge extra env variables
-  set_fact:
-    env: "{{ env | combine(invoker.extraEnv) }}"
-
-- name: setup elasticsearch activation store env
-  set_fact:
-    elastic_env:
-      "CONFIG_whisk_activationStore_elasticsearch_protocol": "{{ db.elasticsearch.protocol}}"
-      "CONFIG_whisk_activationStore_elasticsearch_hosts": "{{ elasticsearch_connect_string }}"
-      "CONFIG_whisk_activationStore_elasticsearch_indexPattern": "{{ db.elasticsearch.index_pattern }}"
-      "CONFIG_whisk_activationStore_elasticsearch_username": "{{ db.elasticsearch.auth.admin.username }}"
-      "CONFIG_whisk_activationStore_elasticsearch_password": "{{ db.elasticsearch.auth.admin.password }}"
-      "CONFIG_whisk_spi_ActivationStoreProvider": "org.apache.openwhisk.core.database.elasticsearch.ElasticSearchActivationStoreProvider"
-  when: db.activation_store.backend == "ElasticSearch"
-
-- name: merge elasticsearch activation store env
-  set_fact:
-    env: "{{ env | combine(elastic_env) }}"
-  when: db.activation_store.backend == "ElasticSearch"
-
-- name: setup mongodb artifact store env
-  set_fact:
-    mongodb_env:
-      "CONFIG_whisk_mongodb_uri": "{{ db.mongodb.connect_string }}"
-      "CONFIG_whisk_mongodb_database": "{{ db.mongodb.database }}"
-      "CONFIG_whisk_spi_ArtifactStoreProvider": "org.apache.openwhisk.core.database.mongodb.MongoDBArtifactStoreProvider"
-  when: db.artifact_store.backend == "MongoDB"
-
-- name: merge mongodb artifact store env
-  set_fact:
-    env: "{{ env | combine(mongodb_env) }}"
-  when: db.artifact_store.backend == "MongoDB"
+- import_tasks: env.yml
 
 - name: include plugins
   include_tasks: "{{ inv_item }}.yml"
