WIP: Improve shutdown process

--- a/core/invoker/src/main/resources/application.conf
+++ b/core/invoker/src/main/resources/application.conf
@@ -20,8 +20,9 @@ include "logging"
 include "akka-http-version"
 
 akka {
-    jvm-shutdown-hooks = off
-    coordinated-shutdown.exit-jvm = off
+    coordinated-shutdown {
+        default-phase-timeout = 70 s
+    }
 }
 
 whisk {
