Add option to disable fastlane

--- a/ansible/roles/invoker/tasks/env.yml
+++ b/ansible/roles/invoker/tasks/env.yml
@@ -89,6 +89,7 @@
       "CONFIG_whisk_containerPool_prewarmPromotion": "{{ container_pool_strict | default('false') | lower }}"
       "CONFIG_whisk_containerPool_prewarmMaxRetryLimit": "{{ container_pool_prewarm_max_retry_limit | default(5) }}"
       "CONFIG_whisk_singularity_client_imagePath": "{{ invoker.singularity.imagePath }}"
+      "CONFIG_whisk_featureFlags_enableFastlane": "{{ whisk.feature_flags.enable_fastlane | default(true) | lower }}"
 
 - name: extend invoker dns env
   set_fact:
