--- a/common/scala/src/main/resources/application.conf
+++ b/common/scala/src/main/resources/application.conf
@@ -546,6 +546,8 @@ whisk {
         # for POST and DELETE APIs
         # See: https://github.com/apache/openwhisk/issues/3274
         require-response-payload = true
+
+        enable-fastlane = true
     }
 
     apache-client {
